# picgame

./: .gitignore  README.md  data.py  pyproject.toml
answers/: apps.py
config/: settings.py  urls.py
games/: models.py  views.py
games/static/games/css/: styles.css
games/templates/games/: game.html
picgame_site/: apps.py  views.py
questions/: models.py  views.py
questions/migrations/: 0001_initial.py  0002_question_image_question_title.py
questions/static/questions/css/: styles.css
questions/templates/questions/: index.html  question.html
static/css/: styles.css
templates/: base.html
templates/games/: game.html
users/: models.py
