[tool.poetry]
name = "picgame"
version = "0.1.0"
description = "Cool game! Take a chance!"
authors = ["vovinov <v.v.ovinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pillow = "^10.0.1"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
